[package]
keywords = ["hash", "probabilistic"]
name = "aabel-multihash-rs"
version = "0.1.0"
edition = "2021"
authors = ["Vlad Eminovici"]
description = "A crate the extends Hasher trait. The added functionality allows users to get sequeces of hash values. It can be used inside of implementations of probabilistic data structures such bloom filter or count-min."
homepage = "https://github.com/veminovici/aabel-multihash-rs"
repository = "https://github.com/veminovici/aabel-multihash-rs"
license = "MIT OR Apache-2.0"
categories = ["utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
siphasher = "1.0"
